--- a/src/vscp/drivers/level2/logger/win32/vscplogger.vcxproj
+++ b/src/vscp/drivers/level2/logger/win32/vscplogger.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A80883CE-CE9F-4F69-9F2F-D8EA3441A952}</ProjectGuid>
+    <ProjectName>vscpl2_loggerdrv</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
