--- a/src/vscp/drivers/level1/zanthic/win32/zanthicdrv.vcxproj
+++ b/src/vscp/drivers/level1/zanthic/win32/zanthicdrv.vcxproj
@@ -21,6 +21,7 @@
   <PropertyGroup Label="Globals">
     <SccProjectName />
     <SccLocalPath />
+    <ProjectName>vscpl1_zanthicdrv</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
