--- a/src/vscp/drivers/level1/can232/win32/can232drv/can232drv.vcxproj
+++ b/src/vscp/drivers/level1/can232/win32/can232drv/can232drv.vcxproj
@@ -125,7 +125,7 @@
       <LinkDLL>true</LinkDLL>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Debug\can232drv.dll</OutputFile>
+      <OutputFile>.\Debug\vscpl1_can232drv.dll</OutputFile>
       <ImportLibrary>.\Debug\can232drv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -233,7 +233,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Release\can232drv.dll</OutputFile>
+      <OutputFile>.\Release\vscpl1_can232drv.dll</OutputFile>
       <ImportLibrary>.\Release\can232drv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
