--- a/src/vscp/drivers/level1/logger/win32/canallogger.vcxproj
+++ b/src/vscp/drivers/level1/logger/win32/canallogger.vcxproj
@@ -126,7 +126,7 @@
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Release\canallogger.dll</OutputFile>
+      <OutputFile>.\Release\vscpl1_loggerdrv.dll</OutputFile>
       <ImportLibrary>.\Release\canallogger.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -238,7 +238,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
       <LinkDLL>true</LinkDLL>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Debug\canallogger.dll</OutputFile>
+      <OutputFile>.\Debug\vscpl1_loggerdrv.dll</OutputFile>
       <ImportLibrary>.\Debug\canallogger.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>odbc32.lib;odbccp32.lib;%(AdditionalDependencies)</AdditionalDependencies>
