--- a/src/vscp/drivers/level1/ixxat_vc2/win32/ixxatvcidrv.vcxproj
+++ b/src/vscp/drivers/level1/ixxat_vc2/win32/ixxatvcidrv.vcxproj
@@ -133,7 +133,7 @@
       <LinkDLL>true</LinkDLL>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Debug\ixxatvcidrv.dll</OutputFile>
+      <OutputFile>.\Debug\vscpl1_ixxatvcidrv.dll</OutputFile>
       <ImportLibrary>.\Debug\ixxatvcidrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>comctl32.lib;wsock32.lib;netapi32.lib;rpcrt4.lib;Xat11Reg.lib;vci11un6.lib;%(AdditionalDependencies)</AdditionalDependencies>
@@ -243,7 +243,7 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
       <SuppressStartupBanner>true</SuppressStartupBanner>
       <LinkDLL>true</LinkDLL>
       <SubSystem>Console</SubSystem>
-      <OutputFile>.\Release\ixxatvcidrv.dll</OutputFile>
+      <OutputFile>.\Release\vscpl1_ixxatvcidrv.dll</OutputFile>
       <ImportLibrary>.\Release\ixxatvcidrv.lib</ImportLibrary>
       <AdditionalLibraryDirectories>$(wxwin)\lib\vc_lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <AdditionalDependencies>comctl32.lib;wsock32.lib;netapi32.lib;Xat11Reg.lib;vci11un6.lib;%(AdditionalDependencies)</AdditionalDependencies>
